# vigilant

./: .devcontainer.json  .env.template  .gitignore  .markdownlint.json  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer-lock.json  devcontainer.json
.devcontainer/zsh-p10k/: README.md  devcontainer-feature.json  install.sh
.devcontainer/zsh-p10k/dotfiles/: .p10k.zsh  .zshrc
.github/workflows/: build-deploy.yml  build-image.yml  test.yml
terraform/: config.tf  main.tf  terraform.tfvars  variables.tf
tests/: conftest.py  test_app.py  test_constants.py  test_data_collector.py  test_logs.py  test_run.py  test_update_spreadsheet.py
tests/collector/: test_main.py
tests/collector/scraper/: test_banco_chile_scrapper.py  test_banco_falabella_scrapper.py  test_scraper.py
tests/common/: test_browser.py  test_constants.py  test_driver.py  test_exceptions.py  test_logs.py  test_models.py  test_spreadsheet.py  test_storage.py  test_values.py
tests/core/: test_data_collector.py  test_main.py  test_update_spreadsheet.py  test_upload.py
tests/core/collector/: test_main.py
tests/core/collector/scraper/: test_banco_chile_scrapper.py  test_banco_falabella_scrapper.py  test_cmr_scrapper.py
tests/data_collector/: test_collector.py  test_crawler.py
tests/resources/: bank_chile.json  bank_chile_no_transactions.json  bank_falabella.json  transformed_bank_data.json
tests/resources/scraper_output/: bank_1.json  bank_2.json
vigilant/: __init__.py  __main__.py  app.py  balance.py  constants.py  data_collector.py  run.py  transactions.py  update_spreadsheet.py
vigilant/collector/: __init__.py  main.py
vigilant/collector/scraper/: __init__.py  scraper.py
vigilant/collector/scraper/banco_chile/: scraper.py  values.py
vigilant/collector/scraper/banco_falabella/: scraper.py  values.py
vigilant/common/: browser.py  constants.py  driver.py  exceptions.py  log.py  models.py  spreadsheet.py  storage.py  values.py
vigilant/core/: __init__.py  data_collector.py  main.py  update_spreadsheet.py  upload.py
vigilant/core/collector/: __init__.py  main.py
vigilant/core/collector/scraper/: __init__.py  banco_chile_scraper.py  cmr_scraper.py  scraper.py
vigilant/core/collector/scraper/banco_chile/: scraper.py  values.py
vigilant/core/collector/scraper/banco_falabella/: scraper.py  values.py
vigilant/core/collector/scraper/cmr/: scraper.py  values.py
vigilant/data_collector/: __init__.py  collector.py  crawler.py
