[project]
name = "vigilant"
version = "0.1.0"
description = ""
authors = [
    { name = "Gustavo Cornejo", email = "g.cornejovivado@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gspread (>=6.2.0,<7.0.0)",
    "selenium (>=4.29.0,<5.0.0)",
    "pandas[excel] (>=2.2.3,<3.0.0)",
    "google-auth (>=2.38.0,<3.0.0)",
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
]

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
pre-commit = "^4.2.0"
ruff = "^0.12.0"

[project.scripts]
vigilant = "vigilant.run:main"

[tool.pytest.ini_options]
addopts = "--cov=vigilant --cov-branch --cov-report term-missing"

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
    "\\.\\.\\.",
    "pass",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
